# Hello

./: .clang-format  CMakeLists.txt  CTestConfig.cmake  hello.cpp  hello.h  main.cpp
.github/workflows/: ci.yml
